<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back_1">


    <Button
        android:id="@+id/buttongoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textresult"
        android:layout_below="@+id/button_find"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="222dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="3dp"
        android:text="@string/go_to"
        android:visibility="invisible" />

    <Button
        android:id="@+id/my"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginStart="-96dp"
        android:layout_toEndOf="@+id/logoo"
        android:background="@color/me"
        android:backgroundTint="@color/me"
        android:text="@string/me"
        android:textColor="#6D4C41"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/logoo"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginEnd="82sp"
        android:background="@color/logo"
        android:fontFamily="@font/almendra_sc"
        android:text="@string/samal_books"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="invisible" />


    <Spinner
        android:id="@+id/spinner_genres"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/my"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="205sp"
        android:background="#00000000"
        android:dropDownWidth="wrap_content"
        android:entries="@array/Genres"
        android:foregroundTint="#FFFFFF"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:visibility="invisible" />


    <Spinner
        android:id="@+id/spinner_formats"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/logoo"
        android:layout_marginStart="205sp"
        android:layout_marginTop="2dp"
        android:background="#00FFFFFF"
        android:dropDownWidth="wrap_content"
        android:entries="@array/Formats"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edittext_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_formats"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:backgroundTint="#FFBF00"
        android:hint="@string/find_a_book"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#009688"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_find"
        android:layout_alignStart="@+id/edittext_find"
        android:layout_alignEnd="@+id/edittext_find"
        android:layout_marginTop="10sp"
        android:backgroundTint="#FFBF00"
        android:text="@string/find"
        android:textColor="#6D4C41" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:background="#FFBF00"
        android:onClick="onClickList">

        <Button
            android:id="@+id/buttonlist0fbooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickList"
            android:text="@string/list_of_books" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <EditText
        android:id="@+id/textresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="213dp"
        android:ems="10"
        android:imeOptions="flagNoAccessoryAction"
        android:inputType="none"
        android:minHeight="48dp"
        android:saveEnabled="false"
        android:text="@string/not_found"
        android:textAlignment="center"
        android:textColor="#4DB6AC"
        android:visibility="invisible" />
<!--    android:autofillHints=""-->

    <ImageView
        android:id="@+id/imagebookmenu"
        android:layout_width="108dp"
        android:layout_height="125dp"
        android:layout_above="@+id/textresult"
        android:layout_below="@+id/button_find"
        android:layout_alignParentStart="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/todo"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_search"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textdescription"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textresult"
        android:layout_below="@+id/button_find"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="58dp"
        android:layout_toEndOf="@+id/imagebookmenu"
        android:inputType="none"
        android:textColor="#4DB6AC"
        android:textSize="16sp"
        android:visibility="invisible" />


</RelativeLayout>