<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".EditActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/imagesetbook"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:visibility="visible"
                app:srcCompat="@drawable/samalbooks"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonsetimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/set_image"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextTextbooktitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/book_title"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editTextbookauthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/book_author"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="#757575"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editTextbookdescriptionedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textLongMessage|textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editTextbookcostedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/cost"
                android:inputType="number|textPersonName|text"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editTextbookoldtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/book_title"
                android:inputType="textPersonName|text"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/editTextbookoldauthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/book_author"
                android:inputType="textPersonName|text"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/buttonCRUD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/add_book" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/exit" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>